--- a/src/blocks/logo/logo.scss
+++ b/src/blocks/logo/logo.scss
@@ -1,14 +1,11 @@
 .logo {
     display: flex;
+    align-items: center;
 
     height: 28px;
-    margin-left: 20px;
 
-    align-items: center;
-}
-
-.logo:hover .logo__text {
-    text-decoration: none;
-
-    color: $grey-lvl8;
+    &:hover .logo__text {
+        text-decoration: none;
+        color: $grey-lvl8;
+    }
 }
