Apply BEM to preloader

--- a/src/global/preloader.scss
+++ b/src/global/preloader.scss
@@ -23,7 +23,7 @@
     transition: opacity .35s ease;
 }
 
-.dot {
+.preloader__dot {
     width: 20px;
     height: 20px;
     margin: 0 10px;
@@ -33,11 +33,11 @@
             animation: show-hide 1s ease infinite;
 }
 
-.dot:nth-child(2) {
+.preloader__dot:nth-child(2) {
     -webkit-animation-delay: 300ms;
             animation-delay: 300ms;
 }
-.dot:nth-child(3) {
+.preloader__dot:nth-child(3) {
     -webkit-animation-delay: 600ms;
             animation-delay: 600ms;
 }
@@ -72,10 +72,10 @@
     }
 }
 
-.preloader__hiding {
+.preloader--hiding {
     opacity: 0;
 }
 
-.preloader__hidden {
+.preloader--hidden {
     display: none;
 }
