--- a/static/main.css
+++ b/static/main.css
@@ -70,7 +70,9 @@ a:hover {
 /* preloader  ---------------------------------------------------- */
 .preloader {
   display: -webkit-box;
+  display: -moz-box;
   display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
@@ -84,37 +86,35 @@ a:hover {
   top: 0;
   left: 0;
   z-index: 1000;
-  background: #76b852 -webkit-gradient(linear, left top, right top, from(#76b852), to(#7cc576));
-  background: #76b852 -webkit-linear-gradient(left, #76b852, #7cc576);
-  background: #76b852 -o-linear-gradient(left, #76b852, #7cc576);
-  background: #76b852 linear-gradient(to right, #76b852, #7cc576);
-  -webkit-transition: opacity .35s ease;
-  -o-transition: opacity .35s ease;
+  background: #7cc576 linear-gradient(to right, #7cc576, #7cc576);
   transition: opacity .35s ease; }
-
-.preloader__dot {
-  width: 20px;
-  height: 20px;
-  margin: 0 10px;
-  border: 4px solid #ffffff;
-  border-radius: 50%;
-  -webkit-animation: show-hide 1s ease infinite;
-  animation: show-hide 1s ease infinite; }
-
-.preloader__dot:nth-child(2) {
-  -webkit-animation-delay: 300ms;
-  animation-delay: 300ms; }
-
-.preloader__dot:nth-child(3) {
-  -webkit-animation-delay: 600ms;
-  animation-delay: 600ms; }
+  .preloader__dot {
+    width: 20px;
+    height: 20px;
+    margin: 0 10px;
+    border: 4px solid #ffffff;
+    border-radius: 50%;
+    -webkit-animation: show-hide 1s ease infinite;
+    animation: show-hide 1s ease infinite; }
+    .preloader__dot:nth-child(2) {
+      -webkit-animation-delay: 300ms;
+      animation-delay: 300ms; }
+    .preloader__dot:nth-child(3) {
+      -webkit-animation-delay: 600ms;
+      animation-delay: 600ms; }
+  .preloader--hiding {
+    opacity: 0; }
+  .preloader--hidden {
+    display: none; }
 
 @-webkit-keyframes show-hide {
   0% {
     -webkit-transform: scale(0);
+    -ms-transform: scale(0);
     transform: scale(0); }
   50% {
     -webkit-transform: scale(1);
+    -ms-transform: scale(1);
     transform: scale(1);
     opacity: 1; }
   100% {
@@ -122,19 +122,15 @@ a:hover {
 @keyframes show-hide {
   0% {
     -webkit-transform: scale(0);
+    -ms-transform: scale(0);
     transform: scale(0); }
   50% {
     -webkit-transform: scale(1);
+    -ms-transform: scale(1);
     transform: scale(1);
     opacity: 1; }
   100% {
     opacity: 0; } }
-.preloader--hiding {
-  opacity: 0; }
-
-.preloader--hidden {
-  display: none; }
-
 /************************************************************************\
   # SETTINGS --- Global end ----------------------------------------------
 \************************************************************************/
@@ -146,10 +142,18 @@ a:hover {
 \************************************************************************/
 /* l-section  ---------------------------------------------------- */
 .l-section {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
-  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  flex-direction: column;
   text-align: center; }
 
 /* >> l-section--banner -------------------------------------------------- */
@@ -336,45 +340,50 @@ a:hover {
     height: 50px; } }
 /* logo  ---------------------------------------------------- */
 .logo {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   height: 28px; }
   .logo:hover .logo__text {
     text-decoration: none;
     color: #222222; }
-
-/* __ logo__text -------------------------------------------------- */
-.logo__text {
-  font-family: "Montserrat", sans-serif;
-  font-size: 18px;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #555555; }
-
-/* __ logo__pic -------------------------------------------------- */
-.logo__pic {
-  position: relative;
-  display: inline-block;
-  width: 28px;
-  height: 28px;
-  margin-right: 4px; }
-
-.logo__pic img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); }
-
-.logo__pic::before {
-  position: absolute;
-  z-index: -10;
-  top: 0;
-  left: 0;
-  width: 28px;
-  height: 28px;
-  content: '';
-  border-radius: 50%;
-  background-color: #7cc576; }
+  .logo__pic {
+    position: relative;
+    display: inline-block;
+    width: 28px;
+    height: 28px;
+    margin-right: 4px; }
+    .logo__pic::before {
+      position: absolute;
+      z-index: -10;
+      top: 0;
+      left: 0;
+      width: 28px;
+      height: 28px;
+      content: '';
+      border-radius: 50%;
+      background-color: #7cc576; }
+    .logo__pic img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); }
+  .logo__text {
+    font-family: "Montserrat", sans-serif;
+    font-size: 18px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #555555; }
 
 /* menu  ---------------------------------------------------- */
 /* __ menu__list -------------------------------------------------- */
