--- a/src/global/preloader.scss
+++ b/src/global/preloader.scss
@@ -1,81 +1,57 @@
+// Block // 
 .preloader {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    @include flexbox(center, center);
+    
     height: 100%;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1000;
-    background: #76b852 -webkit-gradient(linear, left top, right top, from(#76b852), to(#7cc576));
-    background: #76b852 -webkit-linear-gradient(left, #76b852, #7cc576);
-    background: #76b852 -o-linear-gradient(left, #76b852, #7cc576);
-    background: #76b852 linear-gradient(to right, #76b852, #7cc576);
-    -webkit-transition: opacity .35s ease;
-    -o-transition: opacity .35s ease;
+    
+    @include linear-gradient(right, $color-main, #7cc576);
     transition: opacity .35s ease;
+    
+// Element //     
+    &__dot {
+        width: 20px;
+        height: 20px;
+        margin: 0 10px;
+        border: 4px solid #ffffff;
+        border-radius: 50%;
+        @include animation(show-hide, 1s, ease, infinite);
+        
+        &:nth-child(2) {
+            -webkit-animation-delay: 300ms;
+                    animation-delay: 300ms;
+        }
+        
+        &:nth-child(3) {
+            -webkit-animation-delay: 600ms;
+                    animation-delay: 600ms;
+        }
+    }
+    
+// Block Modifier //
+    &--hiding {
+        opacity: 0;
+    }
+
+// Block Modifier //
+    &--hidden {
+        display: none;
+    }
 }
 
-.preloader__dot {
-    width: 20px;
-    height: 20px;
-    margin: 0 10px;
-    border: 4px solid #ffffff;
-    border-radius: 50%;
-    -webkit-animation: show-hide 1s ease infinite;
-            animation: show-hide 1s ease infinite;
-}
-
-.preloader__dot:nth-child(2) {
-    -webkit-animation-delay: 300ms;
-            animation-delay: 300ms;
-}
-.preloader__dot:nth-child(3) {
-    -webkit-animation-delay: 600ms;
-            animation-delay: 600ms;
-}
-
-@-webkit-keyframes show-hide {
+@include keyframes(show-hide) {
     0% {
-        -webkit-transform: scale(0);
-                transform: scale(0);
+        @include scale(0);
     }
     50% {
-        -webkit-transform: scale(1);
-                transform: scale(1);
+        @include scale(1);
         opacity: 1;
     }
     100% {
         opacity: 0;
     }
-}
-
-@keyframes show-hide {
-    0% {
-        -webkit-transform: scale(0);
-                transform: scale(0);
-    }
-    50% {
-        -webkit-transform: scale(1);
-                transform: scale(1);
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
-}
-
-.preloader--hiding {
-    opacity: 0;
-}
-
-.preloader--hidden {
-    display: none;
 }
