--- a/src/layout/l-section/l-section.scss
+++ b/src/layout/l-section/l-section.scss
@@ -1,7 +1,5 @@
 .l-section { 
-    display: flex;
+    @include flexbox(center, center);
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     text-align: center;
 }
