--- a/static/main.css
+++ b/static/main.css
@@ -321,7 +321,7 @@ a:hover {
 
 /* __ header__wrapper -------------------------------------------------- */
 .header__wrapper {
-  width: 100%;
+  width: 90%;
   max-width: 940px;
   height: 80px;
   margin: 0 auto 0 auto;
@@ -386,52 +386,42 @@ a:hover {
     color: #555555; }
 
 /* menu  ---------------------------------------------------- */
-/* __ menu__list -------------------------------------------------- */
 .menu__list {
   display: none; }
-
-@media all and (min-width: 640px) {
-  .menu__list {
-    display: flex; } }
-/* __>> menu__list--open -------------------------------------------------- */
-.menu__list--open {
-  position: absolute;
-  top: 80px;
-  height: 300px;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 270px;
-  background-color: #ffffff;
-  -webkit-box-shadow: 0 13px 12px 0 rgba(0, 0, 0, 0.37);
-  -moz-box-shadow: 0 13px 12px 0 rgba(0, 0, 0, 0.37);
-  box-shadow: 0 13px 12px 0 rgba(0, 0, 0, 0.37);
-  align-items: center;
-  justify-content: space-around; }
-
-@media only screen and (max-width: 640px) and (orientation: landscape) {
+  @media only screen and (min-width: 640px) {
+    .menu__list {
+      display: flex; } }
   .menu__list--open {
-    top: 50px;
-    height: calc(100vh - 50px); } }
-/* __ menu__item -------------------------------------------------- */
+    position: absolute;
+    top: 80px;
+    height: 300px;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 270px;
+    background-color: #ffffff;
+    -webkit-box-shadow: 0 13px 12px rgba(0, 0, 0, 0.37);
+    -moz-box-shadow: 0 13px 12px rgba(0, 0, 0, 0.37);
+    box-shadow: 0 13px 12px rgba(0, 0, 0, 0.37);
+    align-items: center;
+    justify-content: space-around; }
+    @media only screen and (max-width: 640px) and (orientation: landscape) {
+      .menu__list--open {
+        top: 50px;
+        height: calc(100vh - 50px); } }
 .menu__item {
   display: inline-block;
   margin-left: 17px;
   margin-right: 17px; }
-
-/* __ menu__link -------------------------------------------------- */
 .menu__link {
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
   text-decoration: none;
   text-transform: uppercase;
   color: #777777; }
-
-.menu__link:hover {
-  color: #222222; }
-
-/* __ menu__link -------------------------------------------------- */
+  .menu__link:hover {
+    color: #222222; }
 .menu__button {
   margin-right: 20px; }
 
