--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -21,4 +21,24 @@
     color: $grey-lvl8;
     text-shadow: none;
   }
+  
+  &--transparent {
+    background-color: transparent;
+    width: 180px;
+    height: 55px;
+    border: 3px solid #ffffff;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 100;
+    cursor: pointer;
+    border-radius: 8px;
+    transition: all 300ms ease-in;
+
+    &:hover {
+      background-color: $grey-lvl1;
+      color: $green;
+    }
+  }  
 }
