--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -1,44 +1,107 @@
 .button {
-  height: 60px;
-  padding: 0 35px;
-  border: none;
-  border-radius: 45px;
-  position: relative;
+  background-color: transparent;
+  height: 50px;
+  padding: 0 30px;
+  border: 2px solid $grey-lvl1;
   
-  background-color: $color-main;
-  color: $grey-lvl1;
   font-family: $font-second;
-  font-size: $font-size-xs;
+  font-size: $font-size-s;
   text-transform: uppercase;
-  font-weight: 100;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, .7);
-  letter-spacing: -1px;
+  color: $grey-lvl1;
+  font-weight: 600;
   cursor: pointer;
+  border-radius: 7px;
+  transition: all 300ms ease-in;
   z-index: 3;
-  
+
   &:hover {
     background-color: $grey-lvl1;
-    color: $grey-lvl8;
-    text-shadow: none;
+    color: $color-main;
   }
   
-  &--transparent {
-    background-color: transparent;
-    width: 180px;
-    height: 55px;
-    border: 3px solid #ffffff;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
-    text-transform: uppercase;
-    color: #ffffff;
-    font-weight: 100;
-    cursor: pointer;
-    border-radius: 8px;
-    transition: all 300ms ease-in;
+  &--dark {
+      border-color: $grey-lvl6;
+      color: $grey-lvl6;
+      
+      display: flex;
+      align-items: center;
 
+      &:hover {
+          color: $grey-lvl8;
+          border-color: $grey-lvl8;
+      }
+  }
+   
+  &--menu {
+
+@media only screen and (max-width: 640px) and (orientation: landscape)
+{
+    height: 35px;       
+}
+
+@include respond(640px) {
+    display: none;
+}
+
+}
+
+  &__icon {
+    stroke: $grey-lvl6;
+    stroke-width: 3;
+    stroke-linejoin: miter;
+    stroke-linecap: butt;
+    fill: none;
+    transition: all 300ms linear;
+    
     &:hover {
-      background-color: $grey-lvl1;
-      color: $green;
+      stroke: $grey-lvl8;
     }
-  }  
+  }
+  
+  
+  &--open {
+    .icon__open {
+        transform: translateY(-40px);
+        opacity: 0;
+        transition: all 300ms linear;
+        
+    }
+    .icon__close line {
+        opacity: 1;
+        transform: translateY(0);
+        transition: all 300ms linear;
+    }
+}
+
+.button--close {
+    .icon__open {
+        opacity: 1;
+        transform: translateY(0);
+        transition: all 300ms linear;   
+    }
+    .icon__close line {
+        opacity: 0;
+        transform: translateY(40px);
+        transition: all 300ms linear;
+    }
+}
+  
+  
+  &--secondary {
+    //position: relative;
+    background-color: $color-main;
+    height: 60px;
+    padding: 0 35px;
+    border: none;
+    border-radius: 45px;
+
+    font-size: $font-size-xs;
+    color: $grey-lvl1;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, .7);
+    
+    &:hover {
+      color: $grey-lvl8;
+      text-shadow: none;
+    }
+  }
 }
