--- a/static/main.css
+++ b/static/main.css
@@ -817,41 +817,73 @@ a:hover {
 
 /* button  ---------------------------------------------------- */
 .button {
-  height: 60px;
-  padding: 0 35px;
-  border: none;
-  border-radius: 45px;
-  position: relative;
-  background-color: #7cc576;
-  color: #ffffff;
+  background-color: transparent;
+  height: 50px;
+  padding: 0 30px;
+  border: 2px solid #ffffff;
   font-family: "Montserrat", sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   text-transform: uppercase;
-  font-weight: 100;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
-  letter-spacing: -1px;
+  color: #ffffff;
+  font-weight: 600;
   cursor: pointer;
+  border-radius: 7px;
+  transition: all 300ms ease-in;
   z-index: 3; }
   .button:hover {
     background-color: #ffffff;
-    color: #222222;
-    text-shadow: none; }
-  .button--transparent {
-    background-color: transparent;
-    width: 180px;
-    height: 55px;
-    border: 3px solid #ffffff;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
-    text-transform: uppercase;
+    color: #7cc576; }
+  .button--dark {
+    border-color: #777777;
+    color: #777777;
+    display: flex;
+    align-items: center; }
+    .button--dark:hover {
+      color: #222222;
+      border-color: #222222; }
+  @media only screen and (max-width: 640px) and (orientation: landscape) {
+    .button--menu {
+      height: 35px; } }
+  @media only screen and (min-width: 640px) {
+    .button--menu {
+      display: none; } }
+  .button__icon {
+    stroke: #777777;
+    stroke-width: 3;
+    stroke-linejoin: miter;
+    stroke-linecap: butt;
+    fill: none;
+    transition: all 300ms linear; }
+    .button__icon:hover {
+      stroke: #222222; }
+  .button--open .icon__open {
+    transform: translateY(-40px);
+    opacity: 0;
+    transition: all 300ms linear; }
+  .button--open .icon__close line {
+    opacity: 1;
+    transform: translateY(0);
+    transition: all 300ms linear; }
+  .button .button--close .icon__open {
+    opacity: 1;
+    transform: translateY(0);
+    transition: all 300ms linear; }
+  .button .button--close .icon__close line {
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 300ms linear; }
+  .button--secondary {
+    background-color: #7cc576;
+    height: 60px;
+    padding: 0 35px;
+    border: none;
+    border-radius: 45px;
+    font-size: 16px;
     color: #ffffff;
-    font-weight: 100;
-    cursor: pointer;
-    border-radius: 8px;
-    transition: all 300ms ease-in; }
-    .button--transparent:hover {
-      background-color: #ffffff;
-      color: #7cc576; }
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7); }
+    .button--secondary:hover {
+      color: #222222;
+      text-shadow: none; }
 
 /* __ button--transparent -------------------------------------------------- */
 /* __ button--rectangle -------------------------------------------------- */
