--- a/static/main.css
+++ b/static/main.css
@@ -841,36 +841,34 @@ a:hover {
     .button--dark:hover {
       color: #222222;
       border-color: #222222; }
+  .button--menu:hover .button__icon {
+    stroke: #222222; }
   @media only screen and (max-width: 640px) and (orientation: landscape) {
     .button--menu {
       height: 35px; } }
   @media only screen and (min-width: 640px) {
     .button--menu {
       display: none; } }
+  .button--open .button__icon--open {
+    transform: translateY(-40px);
+    opacity: 0; }
+  .button--open .button__icon--close line {
+    opacity: 1;
+    transform: translateY(0);
+    transition: all 300ms linear; }
+  .button--close .button__icon--open {
+    opacity: 1;
+    transform: translateY(0); }
+  .button--close .button__icon--close line {
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 300ms linear; }
   .button__icon {
     stroke: #777777;
     stroke-width: 3;
     stroke-linejoin: miter;
     stroke-linecap: butt;
     fill: none;
-    transition: all 300ms linear; }
-    .button__icon:hover {
-      stroke: #222222; }
-  .button--open .icon__open {
-    transform: translateY(-40px);
-    opacity: 0;
-    transition: all 300ms linear; }
-  .button--open .icon__close line {
-    opacity: 1;
-    transform: translateY(0);
-    transition: all 300ms linear; }
-  .button .button--close .icon__open {
-    opacity: 1;
-    transform: translateY(0);
-    transition: all 300ms linear; }
-  .button .button--close .icon__close line {
-    opacity: 0;
-    transform: translateY(40px);
     transition: all 300ms linear; }
   .button--secondary {
     background-color: #7cc576;
