--- a/static/main.css
+++ b/static/main.css
@@ -849,6 +849,15 @@ a:hover {
   @media only screen and (min-width: 640px) {
     .button--menu {
       display: none; } }
+  .button__icon-container {
+    margin-left: 5px; }
+  .button__icon {
+    stroke: #777777;
+    stroke-width: 3;
+    stroke-linejoin: miter;
+    stroke-linecap: butt;
+    fill: none;
+    transition: all 300ms linear; }
   .button--open .button__icon--open {
     transform: translateY(-40px);
     opacity: 0; }
@@ -863,13 +872,6 @@ a:hover {
     opacity: 0;
     transform: translateY(40px);
     transition: all 300ms linear; }
-  .button__icon {
-    stroke: #777777;
-    stroke-width: 3;
-    stroke-linejoin: miter;
-    stroke-linecap: butt;
-    fill: none;
-    transition: all 300ms linear; }
   .button--secondary {
     background-color: #7cc576;
     height: 60px;
@@ -882,56 +884,6 @@ a:hover {
     .button--secondary:hover {
       color: #222222;
       text-shadow: none; }
-
-/* __ button--transparent -------------------------------------------------- */
-/* __ button--rectangle -------------------------------------------------- */
-.button--menu {
-  background-color: transparent;
-  width: 100px;
-  height: 55px;
-  border: 2px solid #777777;
-  font-family: "Montserrat", sans-serif;
-  font-size: 18px;
-  text-transform: uppercase;
-  color: #777777;
-  font-weight: 100;
-  cursor: pointer;
-  border-radius: 5px;
-  display: flex;
-  align-items: center;
-  transition: all 300ms linear; }
-  .button--menu:hover {
-    color: #222222;
-    border: 2px solid #222222; }
-  .button--menu:hover g {
-    stroke: #000000; }
-  .button--menu span {
-    margin-right: 5px;
-    margin-left: 5px; }
-  @media only screen and (max-width: 640px) and (orientation: landscape) {
-    .button--menu {
-      height: 35px; } }
-  @media only screen and (min-width: 640px) {
-    .button--menu {
-      display: none; } }
-
-.button--open .icon__open {
-  transform: translateY(-40px);
-  opacity: 0;
-  transition: all 300ms linear; }
-.button--open .icon__close line {
-  opacity: 1;
-  transform: translateY(0);
-  transition: all 300ms linear; }
-
-.button--close .icon__open {
-  opacity: 1;
-  transform: translateY(0);
-  transition: all 300ms linear; }
-.button--close .icon__close line {
-  opacity: 0;
-  transform: translateY(40px);
-  transition: all 300ms linear; }
 
 /************************************************************************\
   # BLOCK --- Banner end -------------------------------------------------
