--- a/static/main.css
+++ b/static/main.css
@@ -818,7 +818,7 @@ a:hover {
 /* button  ---------------------------------------------------- */
 .button {
   background-color: transparent;
-  height: 50px;
+  height: 35px;
   padding: 0 30px;
   border: 2px solid #ffffff;
   font-family: "Montserrat", sans-serif;
@@ -841,15 +841,10 @@ a:hover {
       border-color: #222222; }
   .button--menu {
     display: flex;
-    align-items: center; }
+    align-items: center;
+    padding: 0 10px; }
     .button--menu:hover .button__icon {
       stroke: #222222; }
-    @media only screen and (max-width: 640px) and (orientation: landscape) {
-      .button--menu {
-        height: 35px; } }
-    @media only screen and (min-width: 640px) {
-      .button--menu {
-        display: none; } }
   .button__icon-container {
     margin-left: 5px; }
   .button__icon {
@@ -892,5 +887,15 @@ a:hover {
 /*\
 ***
 \*/
+/* media-queries  ---------------------------------------------------- */
+@media only screen and (min-width: 370px) {
+  .button--menu {
+    padding: 0 30px; } }
+@media only screen and (min-width: 640px) {
+  .button--menu {
+    display: none; } }
+@media only screen and (min-width: 640px), (orientation: portrait) {
+  .button--menu {
+    height: 50px; } }
 
 /*# sourceMappingURL=main.css.map */
