--- a/src/blocks/menu/_menu.scss
+++ b/src/blocks/menu/_menu.scss
@@ -1,33 +1,20 @@
 .menu {
   &__list {
     display: none;
-        
-    @include respond(640px) {
-      display: flex;
-    }
 
     &--open {
       position: absolute;
-      top: 80px;
-      height: 300px;
+      top: 50px;
+      height: calc(100vh - 50px);
       left: 0;
-
       display: flex;
       flex-direction: column;
-
       width: 100%;
       height: 270px;
-
       background-color: $grey-lvl1;
       @include box-shadow(0, 13px, 12px, rgba(0,0,0,.37));
-
       align-items: center;
-      justify-content: space-around;
-
-      @media only screen and (max-width: 640px) and (orientation: landscape) {
-        top: 50px;
-        height: calc(100vh - 50px);
-      }
+      justify-content: space-around; 
     }
   }
     
@@ -40,14 +27,24 @@
   &__link {
     font-family: $font-second;
     font-size: $font-size-xxs;
-
     text-decoration: none;
     text-transform: uppercase;
-
     color: $grey-lvl6;
-
-      &:hover {
-        color: $grey-lvl8;
+    &:hover {
+      color: $grey-lvl8;
       }
+  }
+}
+
+// Media queries
+@mixin menu__list--large-screen {
+  .menu__list {
+    display: flex;
+  }
+}
+@mixin menu__list--open--portait {
+  .menu__list--open {
+      top: 80px;
+      height: 300px;
   }
 }
