--- a/src/layout/_media-queries.scss
+++ b/src/layout/_media-queries.scss
@@ -10,11 +10,13 @@
 // Large screen size (--large-screen)
 @media only screen and (min-width: 640px) {
   @include button--menu--large-screen;
+  @include menu__list--large-screen;
 }
 
 // Portrait orientation
 @media only screen and (min-width: 640px), (orientation: portrait) {
   @include button--menu--potrait;
+  @include menu__list--open--portait;
 }
 
 
