--- a/static/main.css
+++ b/static/main.css
@@ -388,13 +388,10 @@ a:hover {
 /* menu  ---------------------------------------------------- */
 .menu__list {
   display: none; }
-  @media only screen and (min-width: 640px) {
-    .menu__list {
-      display: flex; } }
   .menu__list--open {
     position: absolute;
-    top: 80px;
-    height: 300px;
+    top: 50px;
+    height: calc(100vh - 50px);
     left: 0;
     display: flex;
     flex-direction: column;
@@ -406,10 +403,6 @@ a:hover {
     box-shadow: 0 13px 12px rgba(0, 0, 0, 0.37);
     align-items: center;
     justify-content: space-around; }
-    @media only screen and (max-width: 640px) and (orientation: landscape) {
-      .menu__list--open {
-        top: 50px;
-        height: calc(100vh - 50px); } }
 .menu__item {
   display: inline-block;
   margin-left: 17px;
@@ -894,9 +887,16 @@ a:hover {
     padding: 0 30px; } }
 @media only screen and (min-width: 640px) {
   .button--menu {
-    display: none; } }
+    display: none; }
+
+  .menu__list {
+    display: flex; } }
 @media only screen and (min-width: 640px), (orientation: portrait) {
   .button--menu {
-    height: 50px; } }
+    height: 50px; }
+
+  .menu__list--open {
+    top: 80px;
+    height: 300px; } }
 
 /*# sourceMappingURL=main.css.map */
