--- a/src/blocks/opinion/opinion.scss
+++ b/src/blocks/opinion/opinion.scss
@@ -1,20 +1,21 @@
 .opinion {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 40px;
-}
-
-.opinion:last-of-type {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 40px;
+  :last-of-type {
     margin-bottom: 0;
+  }
 }
 
-@include respond(750px) {
+  
+
+// Media queries 
+  @mixin opinion--large-screen {
     .opinion {
-        flex-direction: row;
+      flex-direction: row;
     }
-    
     .opinion:nth-child(even) {
         flex-direction: row-reverse;
     }
-}
+  }
