--- a/src/layout/_media-queries.scss
+++ b/src/layout/_media-queries.scss
@@ -7,7 +7,7 @@
   @include button--menu--small-screen;
 }
 
-// Large screen size (--medium-screen)
+// Medium screen size (--medium-screen)
 @media only screen and (min-width: 640px) {
   @include button--menu--medium-screen;
   @include menu__list--medium-screen;
@@ -19,4 +19,7 @@
   @include menu__list--open--portait;
 }
 
-
+// Large screen size (--large-screen)
+@media only screen and (min-width: 750px) {
+  @include opinion--large-screen ;
+}
