--- a/src/layout/_media-queries.scss
+++ b/src/layout/_media-queries.scss
@@ -21,5 +21,7 @@
 
 // Large screen size (--large-screen)
 @media only screen and (min-width: 750px) {
-  @include opinion--large-screen ;
+  @include opinion--large-screen;
+  @include opinion__picture-background--large-screen;
+  @include opinion__quotation--large-screen;
 }
