--- a/static/main.css
+++ b/static/main.css
@@ -668,85 +668,58 @@ a:hover {
   flex-direction: column;
   align-items: center;
   margin-bottom: 40px; }
-  .opinion :last-of-type {
+  .opinion:last-of-type {
     margin-bottom: 0; }
-
-/* __ opinion__picture-background -------------------------------------------------- */
-.opinion__picture-background {
-  width: 220px;
-  height: 220px;
-  background-color: #f9f9f9;
-  border-radius: 50%;
-  margin-right: 45px;
-  margin-left: 45px;
-  margin-bottom: 45px;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-
-@media only screen and (min-width: 750px) {
   .opinion__picture-background {
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
-    max-width: 220px; } }
-/* __ opinion__picture -------------------------------------------------- */
-.opinion__picture {
-  width: 90%;
-  height: 90%;
-  border-radius: 50%; }
-
-/* __ opinion__quotation -------------------------------------------------- */
-.opinion__quotation {
-  background-color: #f9f9f9;
-  padding: 40px;
-  width: 100%;
-  max-width: 640px;
-  position: relative; }
-
-.opinion__quotation::before {
-  position: absolute;
-  content: "";
-  width: 0;
-  height: 0;
-  left: calc(50% - 13px);
-  top: -23px;
-  border-bottom: 23px solid #f9f9f9;
-  border-left: 13px solid transparent;
-  border-right: 13px solid transparent;
-  border-top: none;
-  z-index: 100; }
-
-@media only screen and (min-width: 750px) {
+    width: 220px;
+    height: 220px;
+    background-color: #f9f9f9;
+    border-radius: 50%;
+    margin-right: 45px;
+    margin-left: 45px;
+    margin-bottom: 45px;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .opinion__picture {
+    width: 90%;
+    height: 90%;
+    border-radius: 50%; }
   .opinion__quotation {
-    margin-left: 30px;
-    margin-right: 30px; }
+    background-color: #f9f9f9;
+    padding: 40px;
+    width: 100%;
+    max-width: 640px;
+    position: relative; }
+    .opinion__quotation::before {
+      position: absolute;
+      content: "";
+      width: 0;
+      height: 0;
+      left: calc(50% - 13px);
+      top: -23px;
+      border-bottom: 23px solid #f9f9f9;
+      border-left: 13px solid transparent;
+      border-right: 13px solid transparent;
+      border-top: none;
+      z-index: 100; }
+  .opinion__text {
+    position: relative;
+    font-size: 22px;
+    margin-bottom: 20px; }
+    .opinion__text::before {
+      content: '" '; }
+    .opinion__text::after {
+      content: ' "'; }
 
-  .opinion__quotation::before {
-    top: calc(50% - 13px);
-    left: -23px;
-    border-right: 23px solid #f9f9f9;
-    border-top: 13px solid transparent;
-    border-bottom: 13px solid transparent;
-    border-left: none; }
-
-  .opinion:nth-child(even) .opinion__quotation::before {
-    left: 100%;
-    transform: scaleX(-1); } }
-/* __ opinion__text -------------------------------------------------- */
-.opinion__text {
-  position: relative;
-  font-size: 22px;
-  margin-bottom: 20px; }
-
-.opinion__text::before {
-  content: '" '; }
-
-.opinion__text::after {
-  content: ' "'; }
-
-/* __ opinion__author -------------------------------------------------- */
 /* partners ---------------------------------------------------- */
 .partners {
   display: flex;
@@ -894,8 +867,28 @@ a:hover {
 @media only screen and (min-width: 750px) {
   .opinion {
     flex-direction: row; }
+    .opinion:nth-child(even) {
+      flex-direction: row-reverse; }
 
-  .opinion:nth-child(even) {
-    flex-direction: row-reverse; } }
+  .opinion__picture-background {
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    max-width: 220px; }
+
+  .opinion__quotation {
+    margin-left: 30px;
+    margin-right: 30px; }
+    .opinion__quotation::before {
+      top: calc(50% - 13px);
+      left: -23px;
+      border-right: 23px solid #f9f9f9;
+      border-top: 13px solid transparent;
+      border-bottom: 13px solid transparent;
+      border-left: none; }
+    .opinion__quotation:nth-child(even) .opinion__quotation::before {
+      left: 100%;
+      transform: scaleX(-1); } }
 
 /*# sourceMappingURL=main.css.map */
