--- a/static/main.css
+++ b/static/main.css
@@ -674,10 +674,7 @@ a:hover {
     width: 220px;
     height: 220px;
     background-color: #f9f9f9;
-    border-radius: 50%;
-    margin-right: 45px;
-    margin-left: 45px;
-    margin-bottom: 45px;
+    margin: 0 45px 45px 45px;
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -691,8 +688,7 @@ a:hover {
     align-items: center; }
   .opinion__picture {
     width: 90%;
-    height: 90%;
-    border-radius: 50%; }
+    height: 90%; }
   .opinion__quotation {
     background-color: #f9f9f9;
     padding: 40px;
@@ -712,13 +708,14 @@ a:hover {
       border-top: none;
       z-index: 100; }
   .opinion__text {
-    position: relative;
     font-size: 22px;
     margin-bottom: 20px; }
     .opinion__text::before {
       content: '" '; }
     .opinion__text::after {
       content: ' "'; }
+  .opinion__author {
+    font-size: 18px; }
 
 /* partners ---------------------------------------------------- */
 .partners {
@@ -871,9 +868,7 @@ a:hover {
       flex-direction: row-reverse; }
 
   .opinion__picture-background {
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
+    margin: 0;
     width: 100%;
     max-width: 220px; }
 
