--- a/src/main.scss
+++ b/src/main.scss
@@ -143,9 +143,7 @@
     @import "blocks/opinion/opinion"; 
 
 /* partners ---------------------------------------------------- */
-    @import "blocks/partners/partners.scss"; 
-/* __ partners__logo -------------------------------------------------- */
-        @import "blocks/partners/__logo/partners__logo.scss";
+    @import "blocks/partners/partners"; 
 
 /* socials ---------------------------------------------------- */
    // @import "blocks/socials/socials.scss"; 
