--- a/src/layout/_media-queries.scss
+++ b/src/layout/_media-queries.scss
@@ -25,3 +25,8 @@
   @include opinion__picture-background--large-screen;
   @include opinion__quotation--large-screen;
 }
+
+// X-large screen size (--xlarge-screen)
+@media only screen and (min-width: 1024px) {
+  @include socials--xlarge-screen;
+}
