--- a/src/blocks/feature/feature.scss
+++ b/src/blocks/feature/feature.scss
@@ -2,21 +2,103 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-top: 50px;
+ //   margin-top: 50px;
     width: 290px;
+  
+  
+  &__title {
+    font-family: $font-second;
+    font-size: 18px;
+    text-transform: uppercase;
+    color: $grey-lvl8;
+    margin-bottom: 5px; 
+    
+    &--lowercase {
+      text-transform: capitalize;
+    }
+  }
+  
+  &__icon-circle {
+    margin: 0 auto 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90px;
+    height: 90px;
+    border: 2px solid #777777;
+    border-radius: 50%;
+    position: relative;
+    transition: transform 150ms ease-in;
+    
+    &--black {
+      margin: 0 auto 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 70px;
+      height: 70px;
+      border: 2px solid #000000;
+      border-radius: 50%;
+      position: relative;
+    }
+  }
+  :hover .feature__icon-circle--resizing {
+    transform: scale(1.2);
+  }
 }
 
-.feature:first-child {
-    margin-top: 0;
-}
-
-@media only screen and (min-width: 1024px) {
-    .feature {
-        margin-top: 0;
+  
+  
+  
+@media all and (min-width: 1024px) {
+    .feature__icon-circle--with-line::after {
+        content: "";
+        position: absolute;
+        width: 170px;
+        top: calc(50% - 2px);
+        left: 115px;
+        border-bottom: 2.5px solid #777777;
+        display: inline;
     }
 }
 
 
+
+
+
+
+
+
+
+
+
+.l-section--background_dark .feature__title {
+    color: $grey-lvl1;
+    margin-bottom: 15px;
+}
+
+.feature:first-child {
+   // margin-top: 0;
+}
+
+
+
+
+
+@media only screen and (min-width: 1024px) {
+    .feature {
+      //  margin-top: 0;
+    }
+}
+
+
+@include respond(1024px) {
+    .feature__title {
+    margin-bottom: 15px;
+}
+  
+  
 .l-section--background_dark .feature {
     align-items: flex-start;
+}
 }
