--- a/src/blocks/feature/feature.scss
+++ b/src/blocks/feature/feature.scss
@@ -42,6 +42,15 @@
       position: relative;
     }
   }
+  
+  &__icon {
+    padding-bottom: 15px;
+    
+    &--top {
+      align-self: flex-start;
+      padding-top: 3px;
+    }
+  }
   :hover .feature__icon-circle--resizing {
     transform: scale(1.2);
   }
@@ -61,10 +70,6 @@
         display: inline;
     }
 }
-
-
-
-
 
 
 
@@ -101,4 +106,20 @@
 .l-section--background_dark .feature {
     align-items: flex-start;
 }
+}
+
+
+@include respond(1024px) {
+    .feature__icon {
+    padding-bottom: 30px;
+}
+}
+
+.l-section--background_dark .feature__icon {
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 0;
+    padding-right: 10px;
 }
