--- a/static/main.css
+++ b/static/main.css
@@ -497,6 +497,9 @@ a:hover {
   flex-direction: column;
   justify-content: space-between;
   width: 290px; }
+  .feature__text {
+    margin-left: 15px;
+    text-align: left; }
   .feature__title {
     font-family: "Montserrat", sans-serif;
     font-size: 18px;
@@ -505,6 +508,13 @@ a:hover {
     margin-bottom: 5px; }
     .feature__title--lowercase {
       text-transform: capitalize; }
+  .feature__description {
+    font-size: 14px;
+    line-height: 1.5; }
+    .feature__description--small {
+      font-size: 12px; }
+    .feature__description--hashtag {
+      font-family: "Myriad Pro", Myriad, "Liberation Sans", "Nimbus Sans L"; }
   .feature__icon-circle {
     margin: 0 auto 0 auto;
     display: flex;
@@ -545,39 +555,12 @@ a:hover {
     left: 115px;
     border-bottom: 2.5px solid #777777;
     display: inline; } }
+.l-section--background_dark .feature {
+  align-items: flex-start; }
+
 .l-section--background_dark .feature__title {
   color: #ffffff;
   margin-bottom: 15px; }
-
-@media only screen and (min-width: 1024px) {
-  .feature__title {
-    margin-bottom: 15px; }
-
-  .l-section--background_dark .feature {
-    align-items: flex-start; } }
-@media only screen and (min-width: 1024px) {
-  .feature__icon {
-    padding-bottom: 30px; } }
-.l-section--background_dark .feature__icon {
-  width: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 0;
-  padding-right: 10px; }
-
-/* __ feature__text -------------------------------------------------- */
-.feature__text {
-  margin-left: 15px;
-  text-align: left; }
-
-/* __ feature__description -------------------------------------------------- */
-.feature__description {
-  font-size: 14px;
-  line-height: 1.5; }
-  @media only all and (max-width: 360px) {
-    .feature__description {
-      font-size: 11px; } }
 
 .l-section--background_dark .feature__description {
   color: #f9f9f9;
@@ -587,14 +570,22 @@ a:hover {
   text-align: left;
   margin: 7px; }
 
-/* __>> feature__description--small -------------------------------------------------- */
-.feature__description--small {
-  font-size: 12px; }
+.l-section--background_dark .feature__icon {
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 0;
+  padding-right: 10px; }
 
-/* __>> feature__description--hashtag -------------------------------------------------- */
-.feature__description--hashtag {
-  font-family: "Myriad Pro", Myriad, "Liberation Sans", "Nimbus Sans L"; }
-
+@media only screen and (min-width: 1024px) {
+  .feature__title {
+    margin-bottom: 15px; } }
+@media only screen and (min-width: 1024px) {
+  .feature__icon {
+    padding-bottom: 30px; } }
+@media only all and (max-width: 360px) {
+  font-size: 11px; }
 /* B--M feature--inline -------------------------------------------------- */
 .feature--inline {
   display: flex;
