--- a/src/main.scss
+++ b/src/main.scss
@@ -101,11 +101,9 @@
     @import "blocks/project/__link/project__link.scss";  
 
 /* feature --------------------------------------------------------- */
-    @import "blocks/feature/feature.scss";  
+    @import "blocks/feature/feature";  
 
 
-/* B--M feature--inline -------------------------------------------------- */
-        @import "blocks/feature/--inline/feature--inline.scss";  
 
 /* list ---------------------------------------------------- */
     @import "blocks/list/list.scss"; 
