--- a/src/main.scss
+++ b/src/main.scss
@@ -115,7 +115,10 @@
     @import "blocks/opinion/opinion"; 
 
 /* partners ---------------------------------------------------- */
-    @import "blocks/partners/partners"; 
+    @import "blocks/partners/partners";
+
+/* items-list --------------------------------------------------------- */
+    @import "blocks/items-list/items-list";  
 
 /* socials ---------------------------------------------------- */
     @import "blocks/socials/socials"; 
