--- a/src/blocks/opinion/_opinion.scss
+++ b/src/blocks/opinion/_opinion.scss
@@ -62,42 +62,34 @@
 
 
 // Media queries 
-// Block
   @mixin opinion--large-screen {
     .opinion {
       flex-direction: row;
       &:nth-child(even) {
         flex-direction: row-reverse;
       }
-    }
-  }
-  
-
-// Element: __picture-background
-  @mixin opinion__picture-background--large-screen {
-    .opinion__picture-background {
-      margin: 0;
-      width: 100%;
-      max-width: 220px;
-    }
-  }
-
-// Element: __quotation
-  @mixin opinion__quotation--large-screen {
-    .opinion__quotation {
-      margin-left: 30px;
-      margin-right: 30px;
-      &::before {
-        top: calc(50% - 13px);
-        left: -23px;
-        border-right: 23px solid #f9f9f9;
-        border-top: 13px solid transparent;
-        border-bottom: 13px solid transparent;
-        border-left: none;
+      
+      &__picture-background {
+        margin: 0;
+        width: 100%;
+        max-width: 220px;
       }
-      &:nth-child(even) .opinion__quotation::before {
-        left: 100%;
-        transform: scaleX(-1);
+      
+      &__quotation {
+        margin-left: 30px;
+        margin-right: 30px;
+        &::before {
+          top: calc(50% - 13px);
+          left: -23px;
+          border-right: 23px solid #f9f9f9;
+          border-top: 13px solid transparent;
+          border-bottom: 13px solid transparent;
+          border-left: none;
+        }
+        &:nth-child(even) .opinion__quotation::before {
+          left: 100%;
+          transform: scaleX(-1);
+        }
       }
     }
   }
