Fix margins for feature block

--- a/src/blocks/socials/_socials.scss
+++ b/src/blocks/socials/_socials.scss
@@ -31,7 +31,7 @@
 }
 
 // Media queries
-@mixin socials--xlarge-screen {
+@mixin socials--x-large-screen {
   .socials {
     position: absolute;
     left: calc(50% - 100px);
