--- a/src/blocks/feature/_feature.scss
+++ b/src/blocks/feature/_feature.scss
@@ -2,8 +2,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
- //   margin-top: 50px;
+    margin-top: 50px;
     width: 290px;
+    &:first-child {
+      margin-top: 0;
+}
   
   &__text {
     margin-left: 15px;
@@ -84,56 +87,40 @@
 
   
   
-  
-@media all and (min-width: 1024px) {
-    .feature__icon-circle--with-line::after {
-        content: "";
-        position: absolute;
-        width: 170px;
-        top: calc(50% - 2px);
-        left: 115px;
-        border-bottom: 2.5px solid #777777;
-        display: inline;
-    }
-}
 
-
-
-
-
-
-
-.feature:first-child {
-   // margin-top: 0;
-}
-
-
-
-
-
-@media only screen and (min-width: 1024px) {
+// Media queries 
+  // X-Large screen > 1024px
+  @mixin feature--x-large-screen {
     .feature {
-      //  margin-top: 0;
+      margin-top: 0; 
+      
+      &--inline {
+        margin-top: 15px;
+      }
+    
+    &__title {
+      margin-bottom: 15px;
     }
+      
+    &__icon-circle--with-line::after {
+      content: "";
+      position: absolute;
+      width: 170px;
+      top: calc(50% - 2px);
+      left: 115px;
+      border-bottom: 2.5px solid #777777;
+      display: inline;
+    }
+      
+    &__icon {
+      padding-bottom: 30px;
+    }
+  }
 }
-
-
-@include respond(1024px) {
-    .feature__title {
-    margin-bottom: 15px;
-}
-}
-
-
-
+/*
 @media only all and (max-width: 360px) {
         //description 
+          .feature__description {
       font-size: 11px;
     }
-
-
-@include respond(1024px) {
-    .feature__icon {
-    padding-bottom: 30px;
-}
-}
+}*/
